# omegaupload

./: .gitignore  .gitmodules  .swcrc  Cargo.toml  README.md  Trunk.toml  build.sh  package.json  tsconfig.json  webpack.config.js
cli/: Cargo.toml
cli/src/: fragment.rs  main.rs
common/: Cargo.toml
common/src/: base64.rs  crypto.rs  fragment.rs  lib.rs
server/: Cargo.toml  README.md
server/src/: main.rs  paste.rs  short_code.rs  time.rs
test/: 0000-test-patch.patch  LICENSE.md  text.pgp  text.txt
web/: Cargo.toml  README.md  index.html
web/src/: bg_encrypt.ts  decrypt.rs  idb_object.rs  index.html  index.js  lib.rs  main.d.ts  main.rs  main.scss  main.ts  reload_on_hash_change.js  render.tsx  util.rs
