[package]
name = "omegaupload"
version = "0.1.1"
edition = "2021"
description = "OmegaUpload CLI tool"
repository = "https://git.eddie.sh/edward/omegaupload"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omegaupload-common = "0.2.0"

anyhow = "1.0.58"
atty = "0.2.14"
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "blocking"] }
rpassword = "6.0.1"
