[package]
name = "omegaupload"
version = "0.1.1"
edition = "2021"
description = "OmegaUpload CLI tool"
repository = "https://git.eddie.sh/edward/omegaupload"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omegaupload-common = { path = "../common" }
anyhow = "1.0.58"
atty = "0.2.14"
bytes = "1"
clap = { version = "3.2.15", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "blocking"] }
rpassword = "7.0.0"
