[package]
name = "omegaupload-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omegaupload-common = { path = "../common" }
anyhow = "1"
axum = { version = "0.4", features = ["http2", "headers"] }
bincode = "1"
# We don't care about which version (We want to match with axum), we just need
# to enable the feature
bytes = { version = "*", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
# We just need to pull in whatever axum is pulling in
headers = "*"
lazy_static = "1"
# Disable `random()` and `thread_rng()`
rand = { version = "0.8", default_features = false }
rocksdb = { version = "0.18", default_features = false, features = ["zstd"] }
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.2", features = ["fs"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"