[package]
name = "omegaupload-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omegaupload-common = { path = "../common" }
anyhow = "1.0.58"
axum = { version = "0.5.14", features = ["http2", "headers"] }
bincode = "1.3.3"
# We don't care about which version (We want to match with axum), we just need
# to enable the feature
bytes = { version = "1.2.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
# We just need to pull in whatever axum is pulling in
headers = "0.3.7"
lazy_static = "1.4.0"
# Disable `random()` and `thread_rng()`
rand = { version = "0.8.5", default-features = false }
rocksdb = { version = "0.18.0", default-features = false, features = ["zstd"] }
serde = { version = "1.0.140", features = ["derive"] }
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["fs"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
