[package]
name = "omegaupload-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
omegaupload-common = { path = "../common", features = ["wasm"] }
# Enables wasm support
getrandom = { version = "*", features = ["js"] }

anyhow = "1"
bytes = "1"
byte-unit = "4"
console_error_panic_hook = "0.1"
gloo-console = "0.2"
http = "0.2"
js-sys = "0.3"
mime_guess = "2"
reqwasm = "0.4"
tree_magic_mini = { version = "3", features = ["with-gpl-data"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
flate2 = "1.0.22"
tar = "0.4.38"

[dependencies.web-sys]
version = "0.3"
features = [
  "BlobPropertyBag",
  "TextDecoder",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbIndex",
  "IdbIndexParameters",
  "Event",
  "EventTarget",
  "Window",
  "Performance",
  "Location",
]
