[package]
name = "omegaupload-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
omegaupload-common = { path = "../common", features = ["wasm"] }
# Enables wasm support
getrandom = { version = "0.2.7", features = ["js"] }

anyhow = "1.0.58"
bytes = "1.2.0"
byte-unit = "4.0.14"
console_error_panic_hook = "0.1.7"
gloo-console = "0.3"
http = "0.2.8"
js-sys = "0.3.59"
mime_guess = "2.0.4"
tree_magic_mini = { version = "3.0.3", features = ["with-gpl-data"] }
serde = { version = "1.0.140", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6" }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
flate2 = "1.0.24"
tar = "0.4.38"
reqwest = "0.11"

[dependencies.web-sys]
version = "0.3.59"
features = [
  "BlobPropertyBag",
  "TextDecoder",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbIndex",
  "IdbIndexParameters",
  "Event",
  "EventTarget",
  "Window",
  "Performance",
  "Location",
]
